apps/helloworld/nginx_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-clusterip
spec:
  ports:
  - port: 8888
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
