apps/helloworld/nginx_ingress.yaml
---
# HTTPS Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.allow-http: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: nginx-ingress
spec:
  rules:
  - host: 34.252.10.234.traefik.me
    http:
      paths:
      - backend:
          service:
            name: nginx-clusterip
            port:
              number: 8888
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - 34.252.10.234.traefik.me
    secretName: nginx-ingress-tls-cert
---
# Ingress to redirect HTTP to HTTPS using the middleware
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-redirect-https
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: helloworld-redirect-https@kubernetescrd
spec:
  rules:
  - host: 34.252.10.234.traefik.me
    http:
      paths:
      - backend:
          service:
            name: nginx-clusterip
            port:
              number: 8888
        path: /
        pathType: ImplementationSpecific
---
# Traefik middleware to redirect HTTP to HTTPS
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
